docs: Wave 12 — expand detail/languages/{c,java,ruby} internals deep-dives
Phase B detail-page parity sweep — first batch.

- detail/languages/c.md     333 → 1773 lines, 23 H2 sections
- detail/languages/java.md  215 → 1506 lines, 23 H2 sections
- detail/languages/ruby.md  326 → 2074 lines, 25 H2 sections

c: abstract machine semantics, linkage model, preprocessor evaluation,
type promotion + struct alignment, strict aliasing + restrict, full
UB taxonomy with ISO C citations, ptmalloc/jemalloc internals, inline
asm + intrinsics, System V AMD64 ABI register layout, ELF + linker,
async-signal-safe table, compilation pipeline, sanitizers, C23 surface.

java: HotSpot architecture (interpreter + C1 + C2 tiers), class loading
delegation, full bytecode primer with opcode walk-through, dispatch
modes (vtable + inline cache + invokedynamic), JMM happens-before
formal, full GC matrix (Serial/Parallel/G1/ZGC/Shenandoah/Epsilon)
with tuning flags, JIT optimizations, virtual threads (Loom) +
Project Panama FFM, JIT log inspection, concurrency primitives.

ruby: CRuby parse → AST → ISeq → YARV pipeline, full opcode set,
VALUE tagged pointers + object layouts (T_OBJECT/T_STRING/T_ARRAY/
T_HASH/T_DATA), GVL with C source, Ractor isolation rules, generational/
incremental/compaction GC history, all 9 RUBY_GC_* tunables, YJIT vs
RJIT vs MJIT, RString embedded/shared, RHash array-stub, two-tier
Symbol pool DoS history, three-callables return semantics, Bundler
Molinillo solver, RBS/Sorbet/Steep typing matrix.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>